docs/api/qiskit/0.24/qiskit.chemistry.algorithms.NumPyMinimumEigensolverFactory.mdx
---
title: NumPyMinimumEigensolverFactory
description: API reference for qiskit.chemistry.algorithms.NumPyMinimumEigensolverFactory
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.chemistry.algorithms.NumPyMinimumEigensolverFactory
---

<span id="qiskit-chemistry-algorithms-numpyminimumeigensolverfactory" />

# qiskit.chemistry.algorithms.NumPyMinimumEigensolverFactory

<Class id="qiskit.chemistry.algorithms.NumPyMinimumEigensolverFactory" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.8/qiskit/chemistry/algorithms/ground_state_solvers/minimum_eigensolver_factories/numpy_minimum_eigensolver_factory.py" signature="NumPyMinimumEigensolverFactory(filter_criterion=None, use_default_filter_criterion=False)">
  A factory to construct a NumPyMinimumEigensolver.

  **Parameters**

  *   **filter\_criterion** (`Optional`\[`Callable`\[\[`Union`\[`List`, `ndarray`], `float`, `Optional`\[`List`\[`float`]]], `bool`]]) – callable that allows to filter eigenvalues/eigenstates. The minimum eigensolver is only searching over feasible states and returns an eigenstate that has the smallest eigenvalue among feasible states. The callable has the signature filter(eigenstate, eigenvalue, aux\_values) and must return a boolean to indicate whether to consider this value or not. If there is no feasible element, the result can even be empty.
  *   **use\_default\_filter\_criterion** (`bool`) – whether to use the transformation’s default filter criterion if `filter_criterion` is `None`.

  ### \_\_init\_\_

  <Function id="qiskit.chemistry.algorithms.NumPyMinimumEigensolverFactory.__init__" name="__init__" signature="__init__(filter_criterion=None, use_default_filter_criterion=False)">
    **Parameters**

    *   **filter\_criterion** (`Optional`\[`Callable`\[\[`Union`\[`List`, `ndarray`], `float`, `Optional`\[`List`\[`float`]]], `bool`]]) – callable that allows to filter eigenvalues/eigenstates. The minimum eigensolver is only searching over feasible states and returns an eigenstate that has the smallest eigenvalue among feasible states. The callable has the signature filter(eigenstate, eigenvalue, aux\_values) and must return a boolean to indicate whether to consider this value or not. If there is no feasible element, the result can even be empty.
    *   **use\_default\_filter\_criterion** (`bool`) – whether to use the transformation’s default filter criterion if `filter_criterion` is `None`.
  </Function>

  ## Methods

  |                                                                                                                                                                                                      |                                                                                                                                    |
  | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.chemistry.algorithms.NumPyMinimumEigensolverFactory.__init__ "qiskit.chemistry.algorithms.NumPyMinimumEigensolverFactory.__init__")(\[filter\_criterion, …])                    | **type filter\_criterion**`Optional`\[`Callable`\[\[`Union`\[`List`, `ndarray`], `float`, `Optional`\[`List`\[`float`]]], `bool`]] |
  | [`get_solver`](#qiskit.chemistry.algorithms.NumPyMinimumEigensolverFactory.get_solver "qiskit.chemistry.algorithms.NumPyMinimumEigensolverFactory.get_solver")(transformation)                       | Returns a NumPyMinimumEigensolver which possibly uses the default filter criterion provided by the `transformation`.               |
  | [`supports_aux_operators`](#qiskit.chemistry.algorithms.NumPyMinimumEigensolverFactory.supports_aux_operators "qiskit.chemistry.algorithms.NumPyMinimumEigensolverFactory.supports_aux_operators")() | Returns whether the eigensolver generated by this factory supports auxiliary operators.                                            |

  ## Attributes

  |                                                                                                                                                                                                                      |                                                     |
  | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------- |
  | [`filter_criterion`](#qiskit.chemistry.algorithms.NumPyMinimumEigensolverFactory.filter_criterion "qiskit.chemistry.algorithms.NumPyMinimumEigensolverFactory.filter_criterion")                                     | returns filter criterion                            |
  | [`use_default_filter_criterion`](#qiskit.chemistry.algorithms.NumPyMinimumEigensolverFactory.use_default_filter_criterion "qiskit.chemistry.algorithms.NumPyMinimumEigensolverFactory.use_default_filter_criterion") | returns whether to use the default filter criterion |

  ### filter\_criterion

  <Function id="qiskit.chemistry.algorithms.NumPyMinimumEigensolverFactory.filter_criterion" name="filter_criterion" signature="property filter_criterion">
    returns filter criterion

    **Return type**

    `Callable`\[\[`Union`\[`List`, `ndarray`], `float`, `Optional`\[`List`\[`float`]]], `bool`]
  </Function>

  ### get\_solver

  <Function id="qiskit.chemistry.algorithms.NumPyMinimumEigensolverFactory.get_solver" name="get_solver" signature="get_solver(transformation)">
    Returns a NumPyMinimumEigensolver which possibly uses the default filter criterion provided by the `transformation`.

    **Parameters**

    **transformation** (`Transformation`) – a fermionic/bosonic qubit operator transformation.

    **Return type**

    `MinimumEigensolver`

    **Returns**

    A NumPyMinimumEigensolver suitable to compute the ground state of the molecule transformed by `transformation`.
  </Function>

  ### supports\_aux\_operators

  <Function id="qiskit.chemistry.algorithms.NumPyMinimumEigensolverFactory.supports_aux_operators" name="supports_aux_operators" signature="supports_aux_operators()">
    Returns whether the eigensolver generated by this factory supports auxiliary operators.
  </Function>

  ### use\_default\_filter\_criterion

  <Function id="qiskit.chemistry.algorithms.NumPyMinimumEigensolverFactory.use_default_filter_criterion" name="use_default_filter_criterion" signature="property use_default_filter_criterion">
    returns whether to use the default filter criterion

    **Return type**

    `bool`
  </Function>
</Class>

